--- a/css/tictactoe.css
+++ b/css/tictactoe.css
@@ -1,3 +1,11 @@
+/************************************************************
+Author: Li Wang
+Date: Apr 24 2017
+Title: Tic Tac Toe game with AI experiments
+Description:
+This game is for testing various AI algorithms for Tic Tac Game.
+*************************************************************/
+
 body {
 	background: #a8175b;
 	margin: 0;
