--- a/css/tictactoe.css
+++ b/css/tictactoe.css
@@ -3,7 +3,7 @@ Author: Li Wang
 Date: Apr 24 2017
 Title: Tic Tac Toe game with AI experiments
 Description:
-This game is for testing various AI algorithms for Tic Tac Game.
+This game is for testing various AI algorithms in Tic Tac Toe.
 *************************************************************/
 
 body {
@@ -41,7 +41,7 @@ h1 {
 	/* arrange from left */
 	float: left;
 
-	/* Round-corner squares, transition time */
+	/* Round-corner squares; transition time between status */
 	border-radius: 15%;
 	transition: 0.3s;
 	-webkit-transition: 0.3s;
